# anysignal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config_sample.toml  docker-compose.yaml  docker-entrypoint.sh  schema_questdb.json
src/: README.md  config.rs  error.rs  lib.rs  main.rs  metadata.rs
src/adapter/: error.rs  mod.rs
src/adapter/coinmarketcap/: bitcoin_dominance.rs  fear_and_greed.rs  mod.rs  new_listing.rs
src/adapter/dexscreener/: mod.rs  token_info.rs
src/adapter/hyperliquid_s3/: asset_ctxs.rs  market_data.rs  mod.rs  node_fills.rs  node_fills_by_block.rs
src/adapter/hyperliquid_ws/: guilder_bridge.rs  mod.rs  predicted_funding.rs
src/adapter/microstrategy/: btc_holding.rs  mod.rs
src/adapter/newsapi/: keyword.rs  mod.rs
src/adapter/polygon/: client.rs  mod.rs
src/adapter/polygonio/: mod.rs  stock.rs
src/adapter/secapi/: form4.rs  mod.rs
src/adapter/youtube/: live_closed_caption.rs  mod.rs
src/api/: mod.rs
src/api/rest/: endpoint.rs  mod.rs
src/backfill/: asset_ctxs.rs  l2_orderbook.rs  l2_snapshot.rs  market_state_1m.rs  mod.rs  node_fills.rs  node_fills_1m_aggregate.rs  node_fills_by_block.rs  node_fills_legacy_1m_aggregate.rs  tracker.rs
src/database/: README.md  mod.rs  response.rs  table.rs
src/engine/: counter.rs  event.rs  market_state.rs  mod.rs  scheduler.rs
src/extension/: reqwest.rs
src/model/: README.md  instance.rs  mod.rs  signal.rs  strategy.rs
strategy/: 1_conference.md  2_yield_curve.md  3_insider_trading.md  4_squeeze_predictor.md
