[package]
name = "signals"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
eyre = "0.6.5"
futures = "0.3.0"
poem = { version = "3.0.0", features = ["rustls", "anyhow", "session", "opentelemetry", "prometheus"] }
poem-openapi = { version = "5.1.4", features = ["chrono", "swagger-ui", "rapidoc", "redoc", "openapi-explorer"] }
questdb-rs = "4.0.3"
rand = "0.8.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.137"
sqlparser = "0.54.0"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.0"
yup-oauth2 = "12.1.0"
config = "0.11"
dotenv = "0.15"
tokio-tungstenite = { version = "0.26.2", features = ["tls"] }
url = "2"
futures-util = "0.3"

[[bin]]
name = "client"
path = "src/adapter/polygon/client.rs"