[package]
name = "anysignal"
version = "0.3.0"
edition = "2021"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unreachable = "warn"

[dependencies]
async-trait = "0.1.86"
chrono = { version = "0.4.40", features = ["serde"] }
eyre = "0.6.5"
futures = "0.3.0"
futures-util = "0.3"
poem = { version = "3.1.7", features = ["rustls", "anyhow", "session", "opentelemetry", "prometheus"] }
poem-openapi = { version = "5.1.8", features = ["chrono", "swagger-ui", "rapidoc", "redoc", "openapi-explorer"] }
questdb-rs = "4.0.3"
rand = "0.8.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1.0"
yup-oauth2 = "12.1.0"
aws-config = "1.5.9"
aws-sdk-s3 = "1.67.0"
aws-smithy-types = "1.2.12"
dotenvy = "0.15.7"
lz4 = "1.25.0"
csv = "1"
